@@ -1,26 +1,0 @@
-dnl Copyright (C) 1993-2002 Free Software Foundation, Inc.
-dnl This file is free software, distributed under the terms of the GNU
-dnl General Public License.  As a special exception to the GNU General
-dnl Public License, this file may be distributed as part of a program
-dnl that contains a configuration script generated by Autoconf, under
-dnl the same distribution terms as the rest of that program.
-
-dnl From Bruno Haible, Marcus Daniels.
-
-AC_PREREQ(2.13)
-
-AC_DEFUN([CL_CC_ANSI],
-[AC_REQUIRE([AC_PROG_CPP])
-AC_CACHE_CHECK(whether using ANSI C, cl_cv_prog_cc_ansi, [
-AC_EGREP_CPP(yes,[#if defined(__STDC__) || defined(__cplusplus)
-  yes
-#endif
-], cl_cv_prog_cc_ansi=yes, cl_cv_prog_cc_ansi=no)
-])
-if test $cl_cv_prog_cc_ansi = yes; then
-  CC_ANSI=true
-else
-  CC_ANSI=false
-fi
-AC_SUBST(CC_ANSI)dnl
-])
