@@ -1,3 +1,13 @@
+2002-05-26  Bruno Haible  <bruno@clisp.org>
+
+	Finish 1998-02-11 patch.
+	* m4/cc-ansi.m4: Remove file.
+	* m4/address.m4 (CL_ADDRESS_RANGE): Don't require CL_CC_ANSI.
+	* configure.in (CL_CC_ANSI): Remove call.
+	* makemake.in: Remove CC_ANSI handling.
+	* Makefile.devel (acorn/makefile.cc): Pass second argument 'cc' to
+	makemake.
+
 2002-05-27  Sam Steingold  <sds@gnu.org>
 
 	fixed last patch
